--- a/style.css
+++ b/style.css
@@ -48,11 +48,11 @@ body {
     
 }
 #home{   
-    height: 90vh;
+    height: auto;
     width: 85%;
     margin: auto;
     margin-top: 5%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     justify-content: space-between;
 }
@@ -60,7 +60,8 @@ body {
    margin-top: 10%;
 }
 #home #child1 span{
-    color: #3949AB;
+    /* color: #3949AB; */
+    color: hsl(224, 89%, 60%);
 }
 #home h1{
     font-size: 59px;
@@ -89,10 +90,106 @@ body {
     border-radius: 40%;
     margin: 40% 0% 0% 0%;
  }
+ 
+ #about{
+    /* border: 1px solid yellow; */
+    margin-top: 10%;
+    padding-top: 5%;
+ }
+#about-me{
+    text-align: center;
+    color: hsl(224, 89%, 60%);
+    font-size: 2.3rem;
+    text-decoration: underline;
+}
+#about-details{
+    width: 75%;
+    /* border: 1px solid green; */
+    display: flex;
+    margin: 3rem 0rem 0rem 15rem;
+    /* margin-top: 3rem; */
+    /* justify-content: space-between; */
+}
+#about-details img{
+    height: 20rem;
+    margin-top: 10%;
+}
+#about-details-child2{
+    margin-left: 15vh;
+}
+#user-detail-intro{
+    margin-top: 1.9rem;
+    font-size: 20px;
+}
+/* #skills{
+    background-color: #CFD8DC;
+} */
+
+#skill-child1{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-auto-rows: auto;
+    gap: 5%;
+    width: 85%;
+    margin: auto;
+    padding-top: 5%;
+    /* background-color: hsl(224, 56%, 12%); */
+    /* color: white; */
+}
+.skills-card{
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; 
+    height: 45vh;
+    border-radius: 30px;
+}
+.skills-card-name{
+    font-size: 23px;
+    text-align: center;
+    margin: 10px 0px 10px 0px;
+}
+#skills img{
+    height: 80%;
+    width: 100%;
+}
+#skills img:hover{
+    height: 90%;
+    width: 110%;
+    cursor: pointer;
+}
+
+#my-skills{
+    text-align: center;
+    color: hsl(224, 89%, 60%);
+    font-size: 2.3rem;
+    text-decoration: underline;
+    margin-top: 10%;
+    padding-top: 5%;
+}
+#my-tools{
+    text-align: center;
+    color: hsl(224, 89%, 60%);
+    font-size: 2.3rem;
+    text-decoration: underline;
+    /* margin-top: 7%; */
+    padding-top: 5%;
+}
+
+
 
 @media screen and (min-width:769px) and (max-width:1024px) {
+    #nav-menu {
+        display: flex;
+        justify-content: space-between;
+        height: 70px;
+        /* border: 1px solid red; */
+        box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
+        font-weight: bold;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        background-color: #CFD8DC;
+    }
     #nav-menu #child1{
-        height: 100%;
+        height: auto;
         width:30%;
         /* border: 1px solid green; */
         padding-top: 18px;
@@ -102,6 +199,93 @@ body {
         width:70%;
         padding-top: 18px;
         /* border: 1px solid green; */
+    }
+    #home{   
+        height: auto;
+        width: 85%;
+        margin: auto;
+        margin-top: 5%;
+        /* border: 1px solid red; */
+        display: flex;
+        justify-content: space-between;
+    }
+    #about{
+        /* border: 1px solid yellow; */
+        margin-top: 10%;
+     }
+    #about-me{
+        text-align: center;
+        color: hsl(224, 89%, 60%);
+        font-size: 2.3rem;
+        text-decoration: underline;
+    }
+    #about-details{
+        width: 90%;
+        /* border: 1px solid green; */
+        display: flex;
+        margin: auto;
+        margin-top: 30px;
+    }
+    #about-details img{
+        height: 20rem;
+        margin-top: 10%;
+    }
+    #about-details-child2{
+        margin-left: 10vh;
+    }
+    #user-detail-intro{
+        margin-top: 1.9rem;
+        font-size: 20px;
+    }
+    #skills{
+        padding-top: 20px;
+    }
+    #skill-child1{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-auto-rows: auto;
+        gap: 5%;
+        width: 85%;
+        margin: auto;
+        padding-top: 5%;
+        /* background-color: hsl(224, 56%, 12%); */
+        /* color: white; */
+    }
+    .skills-card{
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; 
+        height: 35vh;
+        border-radius: 30px;
+    }
+    .skills-card-name{
+        font-size: 23px;
+        text-align: center;
+        margin: 10px 0px 10px 0px;
+    }
+    #skills img{
+        height: 70%;
+        width: 100%;
+    }
+    #skills img:hover{
+        height: 90%;
+        width: 110%;
+        cursor: pointer;
+    }
+    
+    #my-skills{
+        text-align: center;
+        color: hsl(224, 89%, 60%);
+        font-size: 2.3rem;
+        text-decoration: underline;
+        /* margin-top: 7%; */
+        padding-top: 5%;
+    }
+    #my-tools{
+        text-align: center;
+        color: hsl(224, 89%, 60%);
+        font-size: 2.3rem;
+        text-decoration: underline;
+        margin-top: 10%;
+        padding-top: 5%;
     }
 }
 
@@ -131,5 +315,200 @@ body {
         color: black;
         margin-left: 4%;
         
+    }
+    #home{
+        display: block;
+        height: auto;
+        margin-bottom: 10%;
+        margin-top: 20%;
+    }
+    .home-img{
+        /* border-radius: 40%; */
+        margin: 10% 0% 0% 10%;
+     }
+     #about{
+        /* border: 1px solid yellow; */
+        margin-top: 10%;
+     }
+    #about-me{
+        text-align: center;
+        color: hsl(224, 89%, 60%);
+        font-size: 2.3rem;
+        text-decoration: underline;
+    }
+    #about-details{
+        width: 100%;
+        /* border: 1px solid green; */
+        display: flex;
+        margin: auto;
+        margin-top: 30px;
+    }
+    #about-details img{
+        height: 20rem;
+        width: 15rem;
+        margin-top: 10%;
+    }
+    #about-details-child2{
+        margin-left: 5vh;
+    }
+    #user-detail-intro{
+        margin-top: 1.9rem;
+        font-size: 20px;
+    }
+    #skills{
+        padding-top: 33px;
+    }
+    #skill-child1{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-auto-rows: auto;
+        gap: 5%;
+        width: 85%;
+        margin: auto;
+        padding-top: 5%;
+        /* background-color: hsl(224, 56%, 12%); */
+        /* color: white; */
+    }
+    .skills-card{
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; 
+        height: 35vh;
+        border-radius: 30px;
+    }
+    .skills-card-name{
+        font-size: 23px;
+        text-align: center;
+        margin: 10px 0px 10px 0px;
+    }
+    #skills img{
+        height: 70%;
+        width: 100%;
+    }
+    #skills img:hover{
+        height: 90%;
+        width: 110%;
+        cursor: pointer;
+    }
+    
+    #my-skills{
+        text-align: center;
+        color: hsl(224, 89%, 60%);
+        font-size: 2.3rem;
+        text-decoration: underline;
+        /* margin-top: 7%; */
+        padding-top: 5%;
+    }
+    #my-tools{
+        text-align: center;
+        color: hsl(224, 89%, 60%);
+        font-size: 2.3rem;
+        text-decoration: underline;
+        margin-top: 10%;
+        padding-top: 5%;
+    }
+}
+
+@media screen and (min-width:100px) and (max-width:320px){
+    
+
+    #home{
+        display: block;
+        height: auto;
+        width: 170%;
+        margin: auto;
+        margin: 30% 0% 10% 10%;
+        /* border: 1px solid red; */
+    }
+    #home #child1{
+        margin-left: 7%;
+     }
+    .home-img{
+        /* border-radius: 40%; */
+        margin: 10% 0% 0% 10%;
+     }
+
+     #about{
+        /* border: 1px solid yellow; */
+        margin-top: 10%;
+        margin-bottom: 10%;
+     }
+    #about-me{
+        /* text-align: center; */
+        margin-left: 60%;
+        color: hsl(224, 89%, 60%);
+        font-size: 2.3rem;
+        text-decoration: underline;
+    }
+    #about-details{
+        width: 100%;
+        /* border: 1px solid green; */
+        display: block;
+        margin: auto;
+        margin-top: 30px;
+    }
+    #about-details img{
+        height: 25rem;
+        margin: 10% 0% 10% 20%;
+        /* margin-top: 10%;
+        margin-bottom: 10%; */
+    }
+    #about-details-child2{
+        width: 140%;
+        margin-left: 6vh;
+        /* border: 1px solid red; */
+    }
+    #user-detail-intro{
+        margin-top: 1.9rem;
+        font-size: 20px;
+    }
+    #skills{
+        padding-top: 20px;
+        width: 180%;
+    }
+    #skill-child1{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-auto-rows: auto;
+        gap: 5%;
+        width: 85%;
+        margin: auto;
+        padding-top: 10%;
+        /* background-color: hsl(224, 56%, 12%); */
+        /* color: white; */
+    }
+    .skills-card{
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; 
+        height: 35vh;
+        border-radius: 30px;
+    }
+    .skills-card-name{
+        font-size: 23px;
+        text-align: center;
+        margin: 10px 0px 10px 0px;
+    }
+    #skills img{
+        height: 70%;
+        width: 100%;
+    }
+    #skills img:hover{
+        height: 90%;
+        width: 110%;
+        cursor: pointer;
+    }
+    
+    #my-skills{
+        text-align: center;
+        color: hsl(224, 89%, 60%);
+        font-size: 2.3rem;
+        text-decoration: underline;
+        /* margin-top: 7%; */
+        padding-top: 5%;
+    }
+    #my-tools{
+        text-align: center;
+        color: hsl(224, 89%, 60%);
+        font-size: 2.3rem;
+        text-decoration: underline;
+        margin-top: 40%;
+        padding-top: 5%;
     }
 }
