--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ body {
     margin-top: 5%;
 }
 .project-card{
-    height: 85vh;
+    height: auto;
     width: 100%;
     /* border: 1px solid red; */
     text-align: center;
@@ -208,8 +208,14 @@ body {
 .project-card p{
     margin-left: 30px;
 }
+.project-description{
+    margin-top: 10px;
+}
 .project-description a{
     text-decoration: none;
+}
+.project-tech-stack{
+    margin-top: 10px;
 }
 .project-tech-stack span{
     font-weight: bold;
@@ -222,6 +228,7 @@ body {
     font-size: 19px;
     border: none;
     border-radius: 10px;
+    margin-bottom: 20px;
 }
 .project-github-link a{
     text-decoration: none;
@@ -237,12 +244,43 @@ body {
     border: none;
     border-radius: 10px;
     margin-left: 5%;
+    margin-top: 20px;
+    margin-bottom: 10%;
 }
 .project-deployed-link a{
     text-decoration: none;
     color: white;
 }
-
+.react-activity-calendar{
+    width: 90%;
+    margin: auto;
+}
+#github-status{
+    text-align: center;
+    color: hsl(224, 89%, 60%);
+    font-size: 2.3rem;
+    text-decoration: underline;
+    margin-top: 5%;
+    padding-top: 5%;
+}
+#github-contribution{
+    /* margin-left: 10%; */
+    width: 100%;
+}
+#github-streak-stats{
+    margin-left: 10%;
+}
+#github-stats-card{
+    margin-left: 5%;
+}
+#github-top-langs{
+    margin-top: 20px;
+    margin-left: 33%;
+}
+#github-heading{
+   margin-top: 20px;
+   margin-bottom: 10px;
+}
 
 @media screen and (min-width:769px) and (max-width:1024px) {
     #nav-menu {
@@ -365,6 +403,7 @@ body {
         margin-top: 5%;
         padding-top: 7%;
     }
+   
     #project-child1{
         display: grid;
         grid-template-columns: repeat(2,1fr);
@@ -375,7 +414,7 @@ body {
         margin-top: 5%;
     }
     .project-card{
-        height: 60vh;
+        height: auto;
         width: 100%;
         /* border: 1px solid red; */
         text-align: center;
@@ -386,10 +425,69 @@ body {
     .project-card img{
         width: 80%;
         height: 50%;
-        margin: 20px 0px 10px 5%;
+        margin: 0px 0px 10px 5%;
+    }
+    .project-description{
+        margin-top: 10px;
     }
     .project-card p{
         margin-left: 20px;
+    }
+    .project-tech-stack{
+        margin-top: 10px;
+    }
+    .project-github-link{
+        height: 35px;
+        width: 100px;
+        background-color: hsl(224, 89%, 60%);
+        color: white;
+        font-size: 19px;
+        border: none;
+        border-radius: 10px;
+        margin-bottom: 20%;
+    }
+    .project-github-link a{
+        text-decoration: none;
+        color: white;
+    }
+    
+    .project-deployed-link{
+        height: 35px;
+        width: 100px;
+        background-color: hsl(224, 89%, 60%);
+        color: white;
+        font-size: 19px;
+        border: none;
+        border-radius: 10px;
+        margin-left: 5%;
+        margin-top: 20px;
+        margin-bottom: 10%;
+    }
+    .react-activity-calendar{
+        width: 90%;
+        margin: auto;
+    }
+    #github-status{
+        text-align: center;
+        color: hsl(224, 89%, 60%);
+        font-size: 2.3rem;
+        text-decoration: underline;
+        margin-top: 5%;
+        padding-top: 7%;
+    }
+    #github-contribution{
+        /* margin-left: 10%; */
+        width: 100%;
+    }
+    #github-streak-stats{
+        margin-left: 25%;
+    }
+    #github-stats-card{
+        margin-left: 25%;
+    }
+    #github-top-langs{
+        margin-top: 20px;
+        margin-left: 30%;
     }
 }
 
@@ -544,6 +642,32 @@ body {
     .project-card p{
         margin-left: 20px;
     }
+    .react-activity-calendar{
+        width: 90%;
+        margin: auto;
+    }
+    #github-status{
+        text-align: center;
+        color: hsl(224, 89%, 60%);
+        font-size: 2.3rem;
+        text-decoration: underline;
+        margin-top: 7%;
+        padding-top: 12%;
+    }
+    #github-contribution{
+        /* margin-left: 10%; */
+        width: 100%;
+    }
+    #github-streak-stats{
+        margin-left: 10%;
+    }
+    #github-stats-card{
+        margin-left: 10%;
+    }
+    #github-top-langs{
+        margin-top: 20px;
+        margin-left: 20%;
+    }
 }
 
 @media screen and (min-width:100px) and (max-width:500px){
@@ -664,7 +788,7 @@ body {
         display: grid;
         grid-template-columns: repeat(1,1fr);
         grid-auto-rows: auto;
-        gap: 3%;
+        gap: 15px;
         width: 180%;
         margin: auto;
         margin-top: 5%;
@@ -686,5 +810,35 @@ body {
     }
     .project-card p{
         margin-left: 20px;
+    }
+    .react-activity-calendar{
+        width: 180%;
+        margin: auto;
+    }
+    #github-status{
+        text-align: center;
+        color: hsl(224, 89%, 60%);
+        font-size: 2.3rem;
+        text-decoration: underline;
+        margin-top: 7%;
+        padding-top: 7%;
+        margin-left: 5%;
+    }
+    #github-contribution{
+        /* margin-left: 10%; */
+        width: 100%;
+    }
+    #github-streak-stats{
+        margin-left: 10%;
+    }
+    #github-stats-card{
+        margin-left: 10%;
+    }
+    #github-top-langs{
+        margin-top: 20px;
+        margin-left: 20%;
+    }
+    #github-heading{
+        margin-left: 50px;
     }
 }
