--- a/style.css
+++ b/style.css
@@ -286,6 +286,91 @@ body {
    margin-bottom: 10px;
 }
 
+#my-contacts{
+    text-align: center;
+    color: hsl(224, 89%, 60%);
+    font-size: 2.3rem;
+    text-decoration: underline;
+    padding-top: 3%;
+}
+#contact-child1{
+    height: auto;
+    width: 90%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+    margin-bottom: 10%;
+}
+#left-child{
+    width: 45%;
+    
+}
+#right-child{
+    width: 49%;
+    margin-top: 35px;
+}
+
+#left-child p{
+    font-size: 19px;
+    margin-left: 40px;
+}
+#left-child h3{
+    margin-left: 40px;
+}
+#left-child a{
+    font-size: 20px;
+    margin: 20px;
+    text-decoration: none;
+    color: black;
+}
+#left-child i{
+    font-size: 30px;
+    margin: 20px;
+    color: grey;
+}
+
+#right-child input{
+    margin-top: 20px;
+    border-radius: 5px;
+    border: 1px solid grey;
+    font-size: 19px;
+}
+
+#right-child #name{
+    height: 40px;
+    width: 40%;
+    margin-left: 10px;
+    padding-left: 10px;
+}
+#right-child #email{
+    height: 40px;
+    width: 40%;
+    margin-left: 10px;
+    padding-left: 10px;
+}
+#right-child #subject{
+    height: 40px;
+    width: 84%;
+    margin-left: 10px;
+    padding-left: 10px;
+}
+#right-child #message{
+    height: 100px;
+    width: 84%;
+    margin-left: 10px;
+    padding-left: 10px;
+}
+
+#right-child #submit{
+    height: 40px;
+    width: 25%;
+    margin-left: 10px;
+    padding-left: 5px;
+    background-color: hsl(224, 89%, 60%);
+    color: white;
+}
+
 @media screen and (min-width:769px) and (max-width:1024px) {
     #nav-menu {
         display: flex;
@@ -493,6 +578,14 @@ body {
         margin-top: 20px;
         margin-left: 30%;
     }
+    #right-child #submit{
+        height: 40px;
+        width: 35%;
+        margin-left: 10px;
+        padding-left: 5px;
+        background-color: hsl(224, 89%, 60%);
+        color: white;
+    }
 }
 
 @media screen and (min-width:501px) and (max-width:768px) {
@@ -672,6 +765,84 @@ body {
         margin-top: 20px;
         margin-left: 20%;
     }
+
+    #contact-child1{
+        height: auto;
+        width: 90%;
+        margin: auto;
+        display: block;
+        margin-top: 40px;
+        margin-bottom: 10%;
+    }
+    #left-child{
+        width: 90%;
+        
+    }
+    #right-child{
+        width: 80%;
+        margin-top: 35px;
+        margin-left: 6%;
+    }
+    
+    #left-child p{
+        font-size: 19px;
+        margin-left: 40px;
+    }
+    #left-child h3{
+        margin-left: 40px;
+    }
+    #left-child a{
+        font-size: 20px;
+        margin: 20px;
+        text-decoration: none;
+        color: black;
+    }
+    #left-child i{
+        font-size: 30px;
+        margin: 20px;
+        color: grey;
+    }
+    
+    #right-child input{
+        margin-top: 20px;
+        border-radius: 5px;
+        border: 1px solid grey;
+        font-size: 19px;
+    }
+    
+    #right-child #name{
+        height: 40px;
+        width: 40%;
+        margin-left: 10px;
+        padding-left: 10px;
+    }
+    #right-child #email{
+        height: 40px;
+        width: 40%;
+        margin-left: 10px;
+        padding-left: 10px;
+    }
+    #right-child #subject{
+        height: 40px;
+        width: 84%;
+        margin-left: 10px;
+        padding-left: 10px;
+    }
+    #right-child #message{
+        height: 100px;
+        width: 84%;
+        margin-left: 10px;
+        padding-left: 10px;
+    }
+    
+    #right-child #submit{
+        height: 40px;
+        width: 40%;
+        margin-left: 10px;
+        padding-left: 5px;
+        background-color: hsl(224, 89%, 60%);
+        color: white;
+    }
 }
 
 @media screen and (min-width:100px) and (max-width:500px){
@@ -844,5 +1015,91 @@ body {
     }
     #github-heading{
         margin-left: 50px;
+    }
+    #my-contacts{
+        text-align: center;
+        color: hsl(224, 89%, 60%);
+        font-size: 2.3rem;
+        text-decoration: underline;
+        margin-top: 7%;
+        padding-top: 3%;
+        margin-left: 10%;
+    }
+    #contact-child1{
+        height: auto;
+        width: 170%;
+        margin: auto;
+        display: block;
+        margin-top: 40px;
+        margin-bottom: 30%;
+    }
+    #left-child{
+        width: 90%;
+        
+    }
+    #right-child{
+        width: 80%;
+        margin-top: 35px;
+        margin-left: 6%;
+    }
+    
+    #left-child p{
+        font-size: 19px;
+        margin-left: 40px;
+    }
+    #left-child h3{
+        margin-left: 40px;
+    }
+    #left-child a{
+        font-size: 20px;
+        margin: 20px;
+        text-decoration: none;
+        color: black;
+    }
+    #left-child i{
+        font-size: 30px;
+        margin: 20px;
+        color: grey;
+    }
+    
+    #right-child input{
+        margin-top: 20px;
+        border-radius: 5px;
+        border: 1px solid grey;
+        font-size: 19px;
+    }
+    
+    #right-child #name{
+        height: 40px;
+        width: 80%;
+        margin-left: 10px;
+        padding-left: 10px;
+    }
+    #right-child #email{
+        height: 40px;
+        width: 80%;
+        margin-left: 10px;
+        padding-left: 10px;
+    }
+    #right-child #subject{
+        height: 40px;
+        width: 80%;
+        margin-left: 10px;
+        padding-left: 10px;
+    }
+    #right-child #message{
+        height: 100px;
+        width: 80%;
+        margin-left: 10px;
+        padding-left: 10px;
+    }
+    
+    #right-child #submit{
+        height: 40px;
+        width: 40%;
+        margin-left: 10px;
+        padding-left: 5px;
+        background-color: hsl(224, 89%, 60%);
+        color: white;
     }
 }
