--- a/style.css
+++ b/style.css
@@ -419,10 +419,7 @@ body {
   transition: 0.4s;
   display: none;
 }
-.open .bar3{
-    -webkit-transform: rotate(-45deg) translate(-6px -8px);
-    transform:rotate(45deg) translate(-6px -8px) ;
-}
+
 
 .open .bar2{
    opacity: 0;
@@ -430,6 +427,10 @@ body {
 .open .bar1{
     -webkit-transform: rotate(-45deg) translate(-6px 6px);
     transform:rotate(45deg) translate(-6px 6px) ;
+}
+.open .bar3{
+    -webkit-transform: rotate(-45deg) translate(-6px -8px);
+    transform:rotate(45deg) translate(-6px -8px) ;
 }
 
 
@@ -1001,7 +1002,7 @@ body {
         justify-content: flex-start;
      } 
     .mobile-menu{
-        display: none;
+        display: block;
         position: absolute;
         top:50px;
         left: 0;
