--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ body {
     display: flex;
     justify-content: space-between;
 }
+.aos-animate{
+   z-index: -1; 
+}
 #home #child1{
    margin-top: 10%;
 }
@@ -111,12 +114,14 @@ body {
     /* border: 1px solid green; */
     display: flex;
     margin: 3rem 0rem 0rem 15rem;
+    position: initial;
     /* margin-top: 3rem; */
     /* justify-content: space-between; */
 }
 #about-details img{
-    height: 20rem;
+    height: 15rem;
     margin-top: 10%;
+    border-radius: 7px;
 }
 #about-details-child2{
     margin-left: 15vh;
@@ -137,12 +142,14 @@ body {
     width: 85%;
     margin: auto;
     padding-top: 5%;
+    margin-left: 10%;
     /* background-color: hsl(224, 56%, 12%); */
     /* color: white; */
 }
 .skills-card{
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; 
-    height: 45vh;
+    height: 30vh;
+    width: 70%;
     border-radius: 30px;
 }
 .skills-card-name{
@@ -155,8 +162,6 @@ body {
     width: 100%;
 }
 #skills img:hover{
-    height: 85%;
-    width: 100%;
     cursor: pointer;
 }
 
@@ -169,12 +174,14 @@ body {
     width: 85%;
     margin: auto;
     padding-top: 5%;
+    margin-left: 10%;
     /* background-color: hsl(224, 56%, 12%); */
     /* color: white; */
 }
 .tools-card{
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; 
-    height: 45vh;
+    height: 30vh;
+    width: 70%;
     border-radius: 30px;
 }
 .tools-card-name{
@@ -424,9 +431,13 @@ body {
 .open .bar2{
    opacity: 0;
 }
-.open .bar1{
-    -webkit-transform: rotate(-45deg) translate(-6px 6px);
-    transform:rotate(45deg) translate(-6px 6px) ;
+#hamberger-icon.close .bar1{
+    /* -webkit-transform: rotate(-45deg) translate(-6px 6px); */
+    transform:rotate(45deg) translate(-6px,6px) ;
+}
+#hamberger-icon.close .bar3{
+    /* -webkit-transform: rotate(-45deg) translate(-6px 6px); */
+    transform:rotate(-45deg) translate(-6px,6px) ;
 }
 
 
@@ -979,17 +990,19 @@ body {
 
 @media screen and (min-width:100px) and (max-width:500px){
     #nav-menu{
-        height: 100px;
+        position: fixed;
+        height: auto;
     }
     #nav-menu #child1{
-        margin-left: 12%;
+        width: 60%;
     }
       #nav-menu #child1 a{
         font-size: 30px;
+        margin-left: 20%;
       }
      #nav-menu #child2{
         display: block;
-        padding-left: 50%;
+        width: 20%;
      }
      #hamberger-icon{
         display: block; 
@@ -997,7 +1010,7 @@ body {
     .open .mobile-menu{
         display: flex;
         flex-direction: column;
-        padding-left: 10%;
+        padding-left: 5%;
         /* align-items: center;  */
         justify-content: flex-start;
      } 
@@ -1180,19 +1193,21 @@ body {
         grid-template-columns: repeat(1,1fr);
         grid-auto-rows: auto;
         gap: 15px;
-        width: 180%;
+        width: 170%;
         margin: auto;
         margin-top: 5%;
         height: auto;
     }
     .project-card{
-        height: 60vh;
-        width: 100%;
+        height: 80vh;
+        width: 90%;
         /* border: 1px solid red; */
         text-align: center;
         font-size: 19px;
         border-radius: 30px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        margin-top: 40px;
+        margin-left: 40px;
     }
     .project-card img{
         width: 80%;
