--- a/style.css
+++ b/style.css
@@ -1053,6 +1053,10 @@ body {
     .home-img{
         /* border-radius: 40%; */
         margin: 10% 0% 0% 10%;
+        z-index: -1 !important;
+        position: initial !important;
+     }
+     .aos-animate{
         z-index: -1;
      }
 
@@ -1061,6 +1065,7 @@ body {
         margin-top: 10%;
         margin-bottom: 10%;
         padding-top: 17%;
+        position: initial;
         z-index: -1;
      }
     #about-me{
