--- a/style.css
+++ b/style.css
@@ -991,7 +991,8 @@ body {
 @media screen and (min-width:100px) and (max-width:500px){
     #nav-menu{
         position: fixed;
-        height: 80px
+        height: 80px;
+        z-index: 1;
     }
     #nav-menu #child1{
         width: 60%;
@@ -1065,7 +1066,7 @@ body {
         margin-top: 10%;
         margin-bottom: 10%;
         padding-top: 17%;
-        position: initial;
+        /* position: initial; */
         z-index: -1;
      }
     #about-me{
